# Flang-IR-Tracer

./: DESIGN.md  EVALUATION.md  IMPLEMENTATION.md  README.md  RESULTS.md  build.sh  cli.py  pyproject.toml  requirements.txt  run.sh  server.py  shapes.mod
correlator/: __init__.py  loc_index.py
flang_tracer/: driver.py
flang_tracer/correlator/: mapping_engine.py  matcher.py
flang_tracer/hooks/: sema_hook.py
flang_tracer/renderers/: dashboard_renderer.py
flang_tracer/static/: app.js  construct.html  construct.js  index.html
hooks/: fir_hook.py  parse_hook.py
renderers/: json_renderer.py  text_renderer.py
scripts/: run_all_testcases.py
src/flang_tracer/: __init__.py  driver.py  server.py
src/flang_tracer/correlator/: graph.py  ir_stats.py
src/flang_tracer/hooks/: hlfir_hook.py  llvmir_hook.py  mlir_utils.py
src/flang_tracer/renderers/: html_renderer.py
src/flang_tracer/static/: style.css
static/: app.js  construct.html  index.html
testcases/: 01_array_assign.f90  02_do_concurrent.f90  03_where.f90  04_forall.f90  05_poly_dispatch.f90  06_coarray.f90  07_slice.f90  08_elemental.f90  09_associate.f90  10_critical.f90
tests/: test_integration.py
tests/fixtures/: demo.f90  demo.mlir
